[gd_scene load_steps=6 format=3 uid="uid://1suubji6u6uw"]

[ext_resource type="PackedScene" uid="uid://b2fcpdxx3fk7l" path="res://Characters/Mob/Bat/BatModel.tscn" id="1_31bnx"]
[ext_resource type="Script" uid="uid://dbpthr3vid5jq" path="res://Scripts/Mob.gd" id="1_fksse"]

[sub_resource type="SphereShape3D" id="SphereShape3D_a7ual"]
radius = 0.330882

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lu3ud"]
radius = 0.21731
height = 0.819634

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fksse"]
height = 0.52417
radius = 0.79834

[node name="Bat" type="RigidBody3D"]
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 5
script = ExtResource("1_fksse")

[node name="bat_model" parent="." instance=ExtResource("1_31bnx")]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.25
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -2.9676e-08, 0, 2.98468e-08, 1, 2.37037e-11, 2.32831e-10, 1.49214e-13, 1, 2.98023e-08, 0, 0)
shape = SubResource("SphereShape3D_a7ual")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.636926, -0.770925, 0, 0.770925, 0.636926, 0, 0, 0, 1, -0.464237, 0.132535, 0)
shape = SubResource("CapsuleShape3D_lu3ud")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.636925, 0.770922, 0.00239101, 0.770925, 0.636926, 1.86028e-08, -0.00152284, 0.0018433, -0.999997, 0.445565, 0.168163, 0)
shape = SubResource("CapsuleShape3D_lu3ud")

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.621815, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.467378, 0)
shape = SubResource("CylinderShape3D_fksse")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
